--- a/client/src/components/common/Navbar/Navbar.css
+++ b/client/src/components/common/Navbar/Navbar.css
@@ -69,6 +69,7 @@ body {
   display: flex;
   align-items: center;
   transition: background-color 0.3s;
+  text-decoration: none;
 }
 
 .cart-button:hover,
