--- a/client/src/components/common/Footer/Footer.css
+++ b/client/src/components/common/Footer/Footer.css
@@ -7,9 +7,11 @@
   align-items: center;
   justify-content: center;
   margin-top: 12px;
+  font-size: 16px;
 }
 
 .footer a {
   text-decoration: none;
   color: inherit;
+  vertical-align: middle;
 }
