--- a/client/src/components/common/Cart/Cart.css
+++ b/client/src/components/common/Cart/Cart.css
@@ -55,3 +55,37 @@
   height: 100%;
   display: block;
 }
+
+.clear-button-content {
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+}
+
+.clear-button {
+  background-color: rgb(221, 3, 3);
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.clear-button:hover {
+  scale: 1.1;
+}
+
+.add-button {
+  background-color: #38a169;
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.cart-title {
+  margin: 10px 0;
+}
