--- a/client/src/components/common/Cart/Cart.css
+++ b/client/src/components/common/Cart/Cart.css
@@ -7,10 +7,19 @@
   top: 0px;
   width: 200px;
   color: white;
+  overflow-y: auto;
+}
+
+.cart ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .cart img {
-  aspect-ratio: 16/9;
+  aspect-ratio: 4/3;
   width: 100%;
 }
 
@@ -28,32 +37,6 @@
 
 .cart footer button {
   padding: 8px;
-}
-
-.cart-button {
-  align-items: center;
-  background: #09f;
-  border-radius: 9999px;
-  cursor: pointer;
-  display: flex;
-  height: 32px;
-  justify-content: center;
-  padding: 4px;
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  transition: all 0.3s ease;
-  width: 32px;
-  z-index: 9999;
-}
-
-.cart-button:hover {
-  scale: 1.1;
-}
-
-.cart-button ~ input:checked ~ .cart {
-  height: 100%;
-  display: block;
 }
 
 .clear-button-content {
@@ -87,5 +70,9 @@
 }
 
 .cart-title {
-  margin: 10px 0;
+  margin: 5px 0;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
